Fixing error message spacing on claimant page

--- a/app/assets/stylesheets/_fix-for-welsh.scss
+++ b/app/assets/stylesheets/_fix-for-welsh.scss
@@ -23,3 +23,7 @@ div.employment_new_job_gross_pay_frequency.field_with_errors span.error,
 div.employment_notice_pay_period_type.field_with_errors span.error {
   margin-left: 30px;
 }
+
+div.claimant_gender.field_with_errors {
+  padding: 15px 0 15px 10px;
+}
